Fix app links on mobile

--- a/app/javascript/stylesheets/eras.css.scss
+++ b/app/javascript/stylesheets/eras.css.scss
@@ -7,7 +7,9 @@
 }
 
 @media (max-width: 1023px) {
-  .mobile-apps {
-    display: none;
+  .sidebar {
+    .mobile-apps {
+      display: none;
+    }
   }
 }
